# server

./: docker-compose.yml  pyproject.toml
.ci/: docker-compose.yml
api/: Dockerfile  auth.py  db.py  main.py  products.py  purchase.py  purchased_items.py  settings.py  users.py
api/admin/: products.py  purchases.py
api/migrations/: env.py
api/migrations/versions/: V001_users_products_purchases.py
api/models/: products.py  users.py
