[tool.poetry]
name = "fastapi-template"
version = "1.4.0"

authors = ["Avtakhov <avtahovfarit@gmail.com>"]
maintainers = ["Avtakhov <avtahovfarit@gmail.com>"]
description = "Dota2 custom game backend"
keywords = ["FastAPI"]


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fastapi = "^0.109.1"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.9"
sqladmin = "*"
python-jose="*"
pydantic-settings="*"
itsdangerous="*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^7.4.4"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark test as an integration test.",
]

[tool.black]
line_length = 120

[tool.isort]
line_length = 120
profile = "black"
known_first_party = ["api", "infrastructure", "domain"]

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
ignore_missing_imports = true
exclude = [".venv"]

